--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,4 @@
 <app-header></app-header>
 <div class="container">
-  <h1>Hello There</h1>
-  <p>Welcome to {{ title }}</p>
-
-  <app-news></app-news>
+  <app-home></app-home>
 </div>
