--- a/src/app/news/news.component.css
+++ b/src/app/news/news.component.css
@@ -5,11 +5,24 @@
 }
 
 .list-group-item {
-    border-radius: 25px;
-    box-shadow: rgba(3, 102, 214, 0.3) 0px 0px 0px 3px;
+    box-shadow: rgba(3, 102, 214, 0.3) 0px 0px 0px 1px;
 }
 
-h5 {
-    font-family: 'Lato', sans-serif;
+.list-group-item.h4 {
+    font-family: sans-serif;
     font-weight: 400;
+}
+
+.list-group-item {
+    height: 150px;
+}
+
+@media screen and (max-device-width: 768px) {
+    .list-group-item {
+        height: 200px;
+    }
+
+    .list-group-item.h4 {
+        font-size: 0.3em;
+    }
 }
