--- a/src/app/news/news.component.html
+++ b/src/app/news/news.component.html
@@ -45,17 +45,41 @@
     <div class="list-group">
 
         <div *ngFor="let n of news?.data">
-            <div class="list-group-item list-group-item-action flex-column align-items-start my-3"
-                style="height: 200px;">
+            <div class="list-group-item list-group-item-action flex-column align-items-start my-3">
                 <div class="d-flex w-100 justify-content-between">
-                    <h5 class="mb-1">{{n.heading}}</h5>
-                    <small>{{n.type | titlecase}}</small>
+                    <h4 class="mb-1">{{n.heading}}</h4>
+                    <!-- <small>{{n.type | titlecase}}</small> -->
                 </div>
-                <a class="m-1" [href]="n.link" target="_blank">Check Here</a>
-                <small class="m-2 px-2" *ngIf="n.shortDescription">{{n.shortDescription}}</small>
+                <!-- <p class="m-2 px-2" *ngIf="n.shortDescription">{{n.shortDescription}}</p> -->
+                <br>
+                <button class="btn btn-outline-dark m-1" data-bs-toggle="modal" data-bs-target="#myModal"
+                    (click)="readMore()">Read
+                    More</button>
             </div>
         </div>
     </div>
 
-    <div class="text-center"><button class="btn btn-light" (click)="loadMore()">Load More</button></div>
+    <div class="text-center"><button class="btn btn-light" *ngIf="selectedNewsService !== 'ie'"
+            (click)="loadMore()">Load More</button></div>
+    <!-- Modal -->
+    <div class="modal fade modal-xl" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModal"
+        aria-hidden="true">
+        <div class="modal-dialog modal-dialog-centered" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="exampleModalLongTitle">Modal title</h5>
+                    <button type="button" class="close" data-bs-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                <div class="modal-body">
+                    ...
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                    <button type="button" class="btn btn-primary">Save changes</button>
+                </div>
+            </div>
+        </div>
+    </div>
 </div>
