--- a/src/app/news-modal/news-modal.component.html
+++ b/src/app/news-modal/news-modal.component.html
@@ -1,1 +1,24 @@
-<p>news-modal works!</p>
+<!-- Modal -->
+<div class="modal fade modal-xl" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModal" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="exampleModalLongTitle">{{ newsTitle }}</h5>
+                <button type="button" (click)="onClose()" class="close" data-bs-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-body">
+                <p>
+                    {{ newsContents?.context }}
+                </p>
+                <small>By: <i>{{ newsContents?.writtenBy }}</i></small>
+            </div>
+            <div class="modal-footer">
+                <button type="button" (click)="onClose()" class="btn btn-secondary"
+                    data-bs-dismiss="modal">Close</button>
+                <button type="button" class="btn btn-primary">Save changes</button>
+            </div>
+        </div>
+    </div>
+</div>
