--- a/src/app/news/news.component.html
+++ b/src/app/news/news.component.html
@@ -53,7 +53,7 @@
                 <!-- <p class="m-2 px-2" *ngIf="n.shortDescription">{{n.shortDescription}}</p> -->
                 <br>
                 <button class="btn btn-outline-dark m-1" data-bs-toggle="modal" data-bs-target="#myModal"
-                    (click)="readMore()">Read
+                    (click)="readMore(n)">Read
                     More</button>
             </div>
         </div>
@@ -61,25 +61,6 @@
 
     <div class="text-center"><button class="btn btn-light" *ngIf="selectedNewsService !== 'ie'"
             (click)="loadMore()">Load More</button></div>
-    <!-- Modal -->
-    <div class="modal fade modal-xl" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModal"
-        aria-hidden="true">
-        <div class="modal-dialog modal-dialog-centered" role="document">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <h5 class="modal-title" id="exampleModalLongTitle">Modal title</h5>
-                    <button type="button" class="close" data-bs-dismiss="modal" aria-label="Close">
-                        <span aria-hidden="true">&times;</span>
-                    </button>
-                </div>
-                <div class="modal-body">
-                    ...
-                </div>
-                <div class="modal-footer">
-                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-                    <button type="button" class="btn btn-primary">Save changes</button>
-                </div>
-            </div>
-        </div>
-    </div>
+
+    <app-news-modal [newsTitle]="newsTitle" [newsContents]="newsContents"></app-news-modal>
 </div>
