ASCRAPPY-3 Added code for Backend changes n deploy

--- a/src/app/news/news.component.html
+++ b/src/app/news/news.component.html
@@ -47,7 +47,7 @@
         <div *ngFor="let n of news?.data">
             <div class="list-group-item list-group-item-action flex-column align-items-start my-3">
                 <div class="d-flex w-100 justify-content-between">
-                    <h4 class="mb-1">{{n.heading}}</h4>
+                    <h4 class="mb-1">{{n.news}}</h4>
                     <!-- <small>{{n.type | titlecase}}</small> -->
                 </div>
                 <!-- <p class="m-2 px-2" *ngIf="n.shortDescription">{{n.shortDescription}}</p> -->
