--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,6 +1,6 @@
 <div class="container mt-5 p-5">
     <div class="display-1 my-3 text-center">
-        Welcome to Newsopedia
+        Welcome Aditya
     </div>
 
     <hr>
