ASCRAPPY-12 News Home Page

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,11 +1,37 @@
-<div class="container mt-5 p-5">
+<div class="container mt-3 p-5">
     <div class="display-1 my-3 text-center">
-        Welcome Aditya
+        Welcome
     </div>
-
     <hr>
-    <div class="row mt-5">
-        <app-news></app-news>
-    </div>
+    <p class="text-secondary">
+        Welcome to our comprehensive website that brings you the latest news, along with a diverse range of web handy
+        utilities,
+        all in one convenient place. Stay informed and explore the world with our reliable news coverage, covering a
+        wide array
+        of topics including politics, technology, entertainment, science, and more. Our dedicated team of journalists
+        works
+        tirelessly to deliver accurate and up-to-date news, keeping you in the know about current events and
+        developments.
+    </p>
+
+    <p class="text-secondary">
+        In addition to our news coverage, we offer a variety of web handy utilities to enhance your online experience.
+        Whether
+        you're looking for practical tools, entertainment, or productivity boosters, we have you covered. Discover a
+        collection
+        of useful utilities such as language translators, currency converters, weather updates, time zone calculators,
+        and more.
+        Stay organized with our note-taking and task management tools, and find inspiration with our creative resources
+        like
+        image galleries and quote libraries.
+    </p>
+
+    <p class="text-secondary">
+        This website is designed with user-friendliness in mind, providing a seamless and intuitive browsing experience.
+        With a
+        clean and modern interface, you can easily navigate through different sections, access news articles, and
+        utilize our
+        web utilities with ease.
+    </p>
 
 </div>
