--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,10 +1,14 @@
 <div class="container">
-    <header class="d-flex justify-content-center py-3">
+    <nav class="d-flex justify-content-center py-3">
         <ul class="nav nav-pills">
-            <li class="nav-item"><a href="#" class="text-dark nav-link" aria-current="page">Home</a></li>
-            <li class="nav-item"><a href="#" class="text-dark nav-link ">News</a></li>
-            <li class="nav-item"><a href="#" class="text-dark nav-link ">Facts</a></li>
-            <li class="nav-item"><a href="#" class="text-dark nav-link ">About</a></li>
+            <li class="nav-item"><a routerLink="/" class="text-dark nav-link" aria-current="page">Home</a>
+            </li>
+            <li class="nav-item"><a routerLink="/news" class="text-dark nav-link" aria-current="page">News</a>
+            </li>
+
         </ul>
-    </header>
+    </nav>
 </div>
+
+<!-- The routed views render in the <router-outlet>-->
+<router-outlet></router-outlet>
