--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -5,6 +5,8 @@
             </li>
             <li class="nav-item"><a routerLink="/news" class="text-dark nav-link" aria-current="page">News</a>
             </li>
+            <li class="nav-item"><a routerLink="/finance" class="text-dark nav-link" aria-current="page">Finance</a>
+            </li>
 
         </ul>
     </nav>
