--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,6 +1,6 @@
 <div class="container mt-3 p-5">
     <div class="display-1 my-3 text-center">
-        Welcome
+        Welcome {{ user?.name }}
     </div>
     <hr>
     <p class="text-secondary">
