--- a/src/app/finance/finance.component.html
+++ b/src/app/finance/finance.component.html
@@ -11,18 +11,18 @@
             </div>
             <div class="col-md-9 content">
                 <div class="row">
-                    <section *ngIf="showD">
-                        Welcome to Finance Dashboard {{ userDetails?.name }}
+                    <section>
+                        Welcome to your Finance Dashboard {{ userDetails.name }}
                     </section>
-                    <div class="col-lg-4 p-4" *ngIf="userExpenses && screen === 'Expense'">
+                    <div class="col-lg-12 col-md-4 col-xs-2 p-4" *ngIf="userExpenses && screen === 'Expense'">
                         <div *ngIf="isLoading" class="d-flex justify-content-center">
                             <div class="spinner-border m-5" style="width: 3rem; height: 3rem;" role="status">
                                 <span class="visually-hidden">Loading...</span>
                             </div>
                         </div>
-                        <app-chart></app-chart>
-                        <button class="btn btn-primary " (click)="openExpenseModal()">Create Expense</button>
-                        <table class="table text-center">
+                        <button class="btn btn-primary " (click)="openModal('expense')">Create</button>
+                        <table class="table text-center"
+                            *ngIf="userExpenses?.expenses !== undefined; else screenBlock;">
                             <thead class="table-light">
                                 <tr>
                                     <td>Name</td>
@@ -31,7 +31,7 @@
                                     <td>Date of expense</td>
                                     <td>Mode of expense</td>
                                     <td>category</td>
-                                    <td>Edit</td>
+                                    <td></td>
                                 </tr>
                             </thead>
                             <tbody>
@@ -42,13 +42,15 @@
                                     <td>{{ convertIsoToDdMmYyyy(e.dateOfExpense) }}</td>
                                     <td>{{ e.modeOfExpense }}</td>
                                     <td>{{ e.category.category }}</td>
-                                    <td> <button type="button" (click)="editExpenseModal(e.id)">Edit</button> </td>
+                                    <td> <button class="btn btn-info" type="button"
+                                            (click)="editModal(e.id, 'expense')">Edit</button> </td>
                                 </tr>
                             </tbody>
                         </table>
+                        <p>Subtotal Expenses: {{ subtotalExpenseValue }}</p>
                     </div>
-                    <div class="col-lg-4 p-4" *ngIf="userSubscriptions && screen === 'Subscription'">
-                        <button class="btn btn-primary  ">Create Subscription</button>
+                    <div class="col-lg-12 col-md-4 col-xs-2 p-4" *ngIf="userSubscriptions && screen === 'Subscription'">
+                        <button class="btn btn-primary" (click)="openModal('subscription')">Create</button>
                         <table class="table text-center">
                             <thead class="table-light">
                                 <tr>
@@ -61,6 +63,7 @@
                                     <td>Date of Next Payment</td>
                                     <td>Reminder</td>
                                     <td>Active</td>
+                                    <td></td>
                                 </tr>
                             </thead>
                             <tbody>
@@ -78,12 +81,15 @@
                                     <td *ngIf="s.active; else disabled">
                                         <input type="checkbox" name="checked" id="active" checked disabled>
                                     </td>
+                                    <td> <button class="btn btn-info" type="button"
+                                            (click)="editModal(s.id, 'subscription')">Edit</button> </td>
                                 </tr>
                             </tbody>
                         </table>
+                        <p>Subtotal Subscritions: {{ subtotalSubscriptionValue }}</p>
                     </div>
-                    <div class="col-lg-4 p-4" *ngIf="userIncomes  && screen === 'Income'">
-                        <button class="btn btn-primary  ">Create Income</button>
+                    <div class="col-lg-12 col-md-4 col-xs-2 p-4" *ngIf="userIncomes  && screen === 'Income'">
+                        <button class="btn btn-primary" (click)="openModal('income')">Create</button>
                         <table class="table text-center">
                             <thead class="table-light">
                                 <tr>
@@ -93,6 +99,7 @@
                                     <td>Mode of Income</td>
                                     <td>Date of Income</td>
                                     <td>Income Type</td>
+                                    <td></td>
                                 </tr>
                             </thead>
                             <tbody>
@@ -103,9 +110,12 @@
                                     <td>{{ i.modeOfIncome}}</td>
                                     <td>{{ i.dateOfIncome | date:'dd/mm/yyyy' }}</td>
                                     <td>{{ i.incomeType}}</td>
+                                    <td> <button class="btn btn-info" type="button"
+                                            (click)="editModal(i.id, 'income')">Edit</button> </td>
                                 </tr>
                             </tbody>
                         </table>
+                        <p>Subtotal Incomes: {{ subtotalIncomeValue }}</p>
                     </div>
                 </div>
             </div>
@@ -121,5 +131,12 @@
         <td>
             <input type="checkbox" name="checked" id="reminder" disabled>
         </td>
+    </ng-template>
+    <ng-template #screenBlock>
+        <div class="mt-3 offset-lg-5">
+            It seems you haven't created any <b>{{ screen }}</b>. Click the Create button above to add new <b>{{ screen
+                }}s</b>
+        </div>
+
     </ng-template>
 </section>
