--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -8,6 +8,13 @@
             <li class="nav-item" *ngIf="isAuth"><a routerLink="/finance" class="text-dark nav-link"
                     aria-current="page">Finance</a>
             </li>
+            <li class="nav-item" *ngIf="isAuth"><button class="btn btn-link" (click)="logout()">Log out</button>
+            </li>
+
+            <li class="nav-item" *ngIf="!isAuth"><a routerLink="/auth" class="text-dark nav-link"
+                    aria-current="page">Log
+                    In</a>
+            </li>
 
         </ul>
     </nav>
