--- a/src/app/modal/modal.component.css
+++ b/src/app/modal/modal.component.css
@@ -11,10 +11,7 @@
 
 .modal-container {
     background-color: white;
-    border-radius: 10px;
-    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.2);
-    max-width: 80%;
-    max-height: 80%;
+    padding: 20px;
     overflow-y: auto;
 }
 
