--- a/src/styles.css
+++ b/src/styles.css
@@ -2,3 +2,33 @@
 
 @import '~@angular/material/prebuilt-themes/deeppurple-amber.css';
 
+.form-group {
+    margin: 10px 0;
+}
+
+input[type="date"]::before {
+    color: #999999;
+    content: attr(placeholder);
+}
+
+input[type="date"] {
+    color: #ffffff;
+}
+
+input[type="date"]:focus,
+input[type="date"]:valid {
+    color: #666666;
+}
+
+input[type="date"]:focus::before,
+input[type="date"]:valid::before {
+    content: "Select Date" !important;
+}
+
+input[type="number"]::-webkit-outer-spin-button,
+input[type="number"]::-webkit-inner-spin-button{
+    -webkit-appearance: none;
+    margin: 0;
+    -moz-appearance: textfield;
+}
+
