--- a/src/app/finance/finance.component.html
+++ b/src/app/finance/finance.component.html
@@ -1,7 +1,7 @@
 <section>
     <div class="container-fluid">
-        <div class="row">
-            <div class="col-md-3 sidebar">
+        <div class="row row-offcanvas">
+            <div class="col-md-3 sidebar sidebar-offcanvas">
                 <h3>Sections</h3>
                 <ul class="list-group list-group-flush">
                     <li class="list-group-item" (click)="switchScreen('Expense')">My expenses</li>
