--- a/src/app/finance/finance.component.html
+++ b/src/app/finance/finance.component.html
@@ -4,6 +4,7 @@
             <div class="col-md-3 sidebar sidebar-offcanvas">
                 <h3>Sections</h3>
                 <ul class="list-group list-group-flush">
+                    <li class="list-group-item" (click)="switchScreen('')">My Dashboard</li>
                     <li class="list-group-item" (click)="switchScreen('Expense')">My expenses</li>
                     <li class="list-group-item" (click)="switchScreen('Subscription')">My subscriptions</li>
                     <li class="list-group-item" (click)="switchScreen('Income')">My Incomes</li>
@@ -14,108 +15,45 @@
                     <section>
                         Welcome to your Finance Dashboard {{ userDetails.name }}
                     </section>
-                    <div class="col-lg-12 col-md-4 col-xs-2 p-4" *ngIf="userExpenses && screen === 'Expense'">
-                        <div *ngIf="isLoading" class="d-flex justify-content-center">
-                            <div class="spinner-border m-5" style="width: 3rem; height: 3rem;" role="status">
-                                <span class="visually-hidden">Loading...</span>
-                            </div>
-                        </div>
+                    <div class="col-lg-12 col-md-4 col-xs-2 p-4 grid" *ngIf="userExpenses && screen === 'Expense'">
+
                         <button class="btn btn-primary " (click)="openModal('expense')">Create</button>
-                        <table class="table text-center"
-                            *ngIf="userExpenses?.expenses !== undefined; else screenBlock;">
-                            <thead class="table-light">
-                                <tr>
-                                    <td>Name</td>
-                                    <td>Description</td>
-                                    <td>Value</td>
-                                    <td>Date of expense</td>
-                                    <td>Mode of expense</td>
-                                    <td>category</td>
-                                    <td></td>
-                                </tr>
-                            </thead>
-                            <tbody>
-                                <tr *ngFor="let e of userExpenses?.expenses">
-                                    <td *ngIf="e.name !== null; else empty">{{ e.name }}</td>
-                                    <td *ngIf="e.description !== null; else empty">{{ e.description }}</td>
-                                    <td>{{ e.value }}</td>
-                                    <td>{{ convertIsoToDdMmYyyy(e.dateOfExpense) }}</td>
-                                    <td>{{ e.modeOfExpense }}</td>
-                                    <td>{{ e.category.category }}</td>
-                                    <td> <button class="btn btn-info" type="button"
-                                            (click)="editModal(e.id, 'expense')">Edit</button> </td>
-                                </tr>
-                            </tbody>
-                        </table>
-                        <p>Subtotal Expenses: {{ subtotalExpenseValue }}</p>
+                        <app-ag-base-component
+                            *ngIf="userExpenses?.expenses !== undefined && userExpenses?.expenses!.length > 0; else screenBlock;"
+                            [rowData]="rowData" [defaultColDef]="defaultColDef" [columnDefs]="expenseColDefs"
+                            class="ag-theme-quartz" style="width: 100%; height: 100%;" [pagination]="true"
+                            [paginationPageSize]="paginationPageSize"
+                            [paginationPageSizeSelector]="paginationPageSizeSelector">
+
+                        </app-ag-base-component>
+
+                        <!-- <p>Subtotal Expenses: {{ subtotalExpenseValue }}</p> -->
                     </div>
-                    <div class="col-lg-12 col-md-4 col-xs-2 p-4" *ngIf="userSubscriptions && screen === 'Subscription'">
+                    <div class="col-lg-12 col-md-4 col-xs-2 p-4 grid"
+                        *ngIf="userSubscriptions && screen === 'Subscription'">
                         <button class="btn btn-primary" (click)="openModal('subscription')">Create</button>
-                        <table class="table text-center">
-                            <thead class="table-light">
-                                <tr>
-                                    <td>Name</td>
-                                    <td>Description</td>
-                                    <td>Value</td>
-                                    <td>Type of Subscription</td>
-                                    <td>Date of Start</td>
-                                    <td>Date of End</td>
-                                    <td>Date of Next Payment</td>
-                                    <td>Reminder</td>
-                                    <td>Active</td>
-                                    <td></td>
-                                </tr>
-                            </thead>
-                            <tbody>
-                                <tr *ngFor="let s of userSubscriptions?.subscriptions">
-                                    <td>{{ s.name}}</td>
-                                    <td>{{ s.description}}</td>
-                                    <td>{{ s.value}}</td>
-                                    <td>{{ s.subType}}</td>
-                                    <td>{{ s.dateOfStart | date:'dd/mm/yyyy'}}</td>
-                                    <td>{{ s.dateOfEnd | date:'dd/mm/yyyy' }}</td>
-                                    <td>{{ s.dateOfNextPayment| date:'dd/mm/yyyy' }}</td>
-                                    <td *ngIf="s.reminder; else disabled">
-                                        <input type="checkbox" name="checked" id="reminder" checked disabled>
-                                    </td>
-                                    <td *ngIf="s.active; else disabled">
-                                        <input type="checkbox" name="checked" id="active" checked disabled>
-                                    </td>
-                                    <td> <button class="btn btn-info" type="button"
-                                            (click)="editModal(s.id, 'subscription')">Edit</button> </td>
-                                </tr>
-                            </tbody>
-                        </table>
-                        <p>Subtotal Subscritions: {{ subtotalSubscriptionValue }}</p>
+                        <app-ag-base-component
+                            *ngIf="userSubscriptions?.subscriptions !== undefined && userSubscriptions?.subscriptions!.length > 0; else screenBlock;"
+                            [rowData]="subRowData" [defaultColDef]="defaultColDef" [columnDefs]="subscriptionColDefs"
+                            class="ag-theme-quartz" style="width: 100%; height: 500px;" [pagination]="true"
+                            [paginationPageSize]="paginationPageSize"
+                            [paginationPageSizeSelector]="paginationPageSizeSelector">
+
+                        </app-ag-base-component>
+
+                        <!-- <p>Subtotal Subscritions: {{ subtotalSubscriptionValue }}</p> -->
                     </div>
-                    <div class="col-lg-12 col-md-4 col-xs-2 p-4" *ngIf="userIncomes  && screen === 'Income'">
+                    <div class="col-lg-12 col-md-4 col-xs-2 p-4 grid" *ngIf="userIncomes  && screen === 'Income'">
                         <button class="btn btn-primary" (click)="openModal('income')">Create</button>
-                        <table class="table text-center">
-                            <thead class="table-light">
-                                <tr>
-                                    <td>Name</td>
-                                    <td>Description</td>
-                                    <td>Value</td>
-                                    <td>Mode of Income</td>
-                                    <td>Date of Income</td>
-                                    <td>Income Type</td>
-                                    <td></td>
-                                </tr>
-                            </thead>
-                            <tbody>
-                                <tr *ngFor="let i of userIncomes?.incomes">
-                                    <td>{{ i.name}}</td>
-                                    <td>{{ i.description}}</td>
-                                    <td>{{ i.value}}</td>
-                                    <td>{{ i.modeOfIncome}}</td>
-                                    <td>{{ i.dateOfIncome | date:'dd/mm/yyyy' }}</td>
-                                    <td>{{ i.incomeType}}</td>
-                                    <td> <button class="btn btn-info" type="button"
-                                            (click)="editModal(i.id, 'income')">Edit</button> </td>
-                                </tr>
-                            </tbody>
-                        </table>
-                        <p>Subtotal Incomes: {{ subtotalIncomeValue }}</p>
+                        <app-ag-base-component *ngIf="userIncomes?.incomes !== undefined && userIncomes?.incomes
+                        !.length > 0; else screenBlock;" [rowData]="incomeRowData" [defaultColDef]="defaultColDef"
+                            [columnDefs]="incomeColDefs" class="ag-theme-quartz" style="width: 100%; height: 100%;"
+                            [pagination]="true" [paginationPageSize]="paginationPageSize"
+                            [paginationPageSizeSelector]="paginationPageSizeSelector">
+
+                        </app-ag-base-component>
+
+                        <!-- <p>Subtotal Incomes: {{ subtotalIncomeValue }}</p> -->
                     </div>
                 </div>
             </div>
@@ -133,10 +71,15 @@
         </td>
     </ng-template>
     <ng-template #screenBlock>
-        <div class="mt-3 offset-lg-5">
+        <div class="mt-3">
             It seems you haven't created any <b>{{ screen }}</b>. Click the Create button above to add new <b>{{ screen
                 }}s</b>
         </div>
 
+    </ng-template>
+    <ng-template #gridLoading>
+        <div class="spinner-border m-5" style="width: 3rem; height: 3rem;" role="status">
+            <span class="visually-hidden">Loading...</span>
+        </div>
     </ng-template>
 </section>
