--- a/src/styles.css
+++ b/src/styles.css
@@ -2,6 +2,11 @@
 
 @import '~@angular/material/prebuilt-themes/deeppurple-amber.css';
 
+/* Core Grid CSS */
+@import 'ag-grid-community/styles/ag-grid.css';
+/* Quartz Theme Specific CSS */
+@import 'ag-grid-community/styles/ag-theme-quartz.css';
+
 .form-group {
     margin: 10px 0;
 }
